--- a/login.css
+++ b/login.css
@@ -9,7 +9,7 @@
 body {
   width: 100%;
   min-height: 100vh; 
-  background-image: url("images\back jomana.jpg");
+  background-image: url("back jomana.jpg");
   background-size: cover; 
   background-repeat: no-repeat;
   background-position: center center;
