--- a/login.css
+++ b/login.css
@@ -205,7 +205,7 @@ body {
 
 .ad-banner {
   position: absolute;
-  top: calc(100% + 30px); /* Position the ad banner below the form with a 20px gap */
+  top: calc(100% + 50px);
   right: 400px; 
 }
 
