--- a/reset password.css
+++ b/reset password.css
@@ -10,7 +10,7 @@ body{
     color: white;
     font-family:"sans-serif";
     min-height: 100vh; 
-    background-image: url('sign\ in.webp');
+    background-image: url('back jomana.jpg');
     background-size: cover; 
     background-repeat: no-repeat;
     background-position: center center;
